retry downloads if they fail

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,3 +12,16 @@ params {
 docker {
     enabled = true
 }
+
+process {
+    errorStrategy = { sleep(Math.pow(2, task.attempt) * 200 as long) ? 'retry' : 'finish' }
+    maxRetries    = 3
+    maxErrors     = '-1'
+
+    cpus = 1
+    memory = 2.GB
+    time = 6.h
+    container = "ghcr.io/ebi-gdp/globus-file-handler-cli:1.0.0"
+}
+
+nextflow.enable.strict = true
