--- a/nextflow.config
+++ b/nextflow.config
@@ -25,3 +25,14 @@ process {
 }
 
 nextflow.enable.strict = true
+
+manifest {
+    name            = 'ebi-gdp/globflow'
+    author          = 'Benjamin Wingfield'
+    defaultBranch   = 'main'
+    homePage        = 'https://github.com/ebi-gdp/globflow'
+    description     = 'Download files from Globus over HTTPS, with optional decryption on the fly'
+    mainScript      = 'main.nf'
+    nextflowVersion = '>=23.10.1'
+    version         = '0.1.0'
+}
