add singularity profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -4,24 +4,32 @@ params {
     input = null
 
     // optional params
+    threads = 1
     config_path = "$baseDir/assets/application-dev.properties"
     outdir = "results"
     secret_key = "$baseDir/assets/NO_FILE"
 }
 
-docker {
-    enabled = true
+profiles {
+    docker {
+        docker.enabled = true
+        singularity.enabled = false
+    }
+    arm {
+        docker.runOptions      = '--platform=linux/arm64'
+    }
+    singularity {
+        singularity.enabled = true
+        docker.enabled = false
+    }
 }
 
 process {
-    errorStrategy = { sleep(Math.pow(2, task.attempt) * 200 as long) ? 'retry' : 'finish' }
-    maxRetries    = 3
-    maxErrors     = '-1'
-
+    maxRetries = 3
+    maxErrors = '-1'
     cpus = 1
     memory = 2.GB
     time = 6.h
-    container = "ghcr.io/ebi-gdp/globus-file-handler-cli:1.0.0"
 }
 
 nextflow.enable.strict = true
