--- a/nextflow.config
+++ b/nextflow.config
@@ -4,7 +4,6 @@ params {
     input = null
 
     // optional params
-    threads = 1
     outdir = "results"
 }
 
@@ -37,8 +36,8 @@ manifest {
     author          = 'Benjamin Wingfield'
     defaultBranch   = 'main'
     homePage        = 'https://github.com/ebi-gdp/globflow'
-    description     = 'Download files from Globus over HTTPS, with optional decryption on the fly'
+    description     = 'Download files from Globus over HTTPS, with decryption on the fly'
     mainScript      = 'main.nf'
     nextflowVersion = '>=23.10.1'
-    version         = '0.2.0'
+    version         = '1.0.0'
 }
