--- a/nextflow.config
+++ b/nextflow.config
@@ -2,6 +2,7 @@ params {
     // mandatory params
     config_secrets = null
     input = null
+    secret_key = null
 
     // optional params
     outdir = "results"
