--- a/nextflow.config
+++ b/nextflow.config
@@ -1,36 +1,27 @@
-params {
-    // mandatory params
-    config_secrets = null
-    input = null
+nextflow.enable.strict = true
 
-    // optional params
-    threads = 1
+params {
+    input = null
+    secret_key = null
+    config_application = null
+    config_crypt4gh = null
     outdir = "results"
 }
 
 profiles {
     docker {
         docker.enabled = true
-        singularity.enabled = false
     }
     arm {
         docker.runOptions  = '--platform=linux/arm64'
     }
-    singularity {
-        singularity.enabled = true
-        docker.enabled = false
-    }
 }
 
 process {
-    maxRetries = 3
-    maxErrors = '-1'
     cpus = 1
     memory = 2.GB
     time = 6.h
 }
-
-nextflow.enable.strict = true
 
 manifest {
     name            = 'ebi-gdp/globflow'
@@ -40,5 +31,5 @@ manifest {
     description     = 'Download files from Globus over HTTPS, with optional decryption on the fly'
     mainScript      = 'main.nf'
     nextflowVersion = '>=23.10.1'
-    version         = '0.2.0'
+    version         = '1.0.0'
 }
