--- a/nextflow.config
+++ b/nextflow.config
@@ -6,6 +6,8 @@ params {
     config_application = null
     config_crypt4gh = null
     outdir = "results"
+    debug = false  // keep files around for debugging
+    decrypt = false // try to decrypt on the fly?
 }
 
 profiles {
@@ -21,6 +23,7 @@ process {
     cpus = 1
     memory = 2.GB
     time = 6.h
+    container = "ghcr.io/ebi-gdp/globus-file-handler-cli:1.0.5"
 }
 
 manifest {
